--- a/perldoc/ko/perl/5.10/perlipc.pod
+++ b/perldoc/ko/perl/5.10/perlipc.pod
@@ -741,10 +741,10 @@ C<$SIG{ALRM}>:
 
 gethostbyname() 같은 네트워크 라이브러리 함수는 독자적인 타임아웃 구성을 가지고 있는
 것이 알려졌기 때문에, 당신의 타임아웃과 경쟁할지도 모르는 것에 주의해주세요.
-もしこのような関数で問題が起きた場合は、Perl の安全なシグナルを回避する
-POSIX sigaction() 関数を試すことができます
-(これは上述の、メモリ破壊の可能性があるということに注意してください)。
-C<$SIG{ALRM}> をセットする代わりに:
+만약 이런 함수에서 문제가 발생한 경우는, Perl 의 안전한 시그널을 회피하는 
+POSIX sigaction() 함수를 시험할 수 있습니다
+(이것은 위에서 언급한 메모리의 파괴 가능성이 있다라는 것에 주의해주세요).
+C<$SIG{ALRM}> 을 설정하는 대신에:
 
    local $SIG{ALRM} = sub { die "alarm" };
 
@@ -754,7 +754,7 @@ try something like the following:
 
 =end original
 
-以下のようなことを試してみてください:
+아래와 같은 것을 시험해주세요:
 
     use POSIX qw(SIGALRM);
     POSIX::sigaction(SIGALRM,
@@ -769,13 +769,13 @@ all signals).
 
 =end original
 
-安全なシグナルの振る舞いを局所的に無効にするもう一つの方法は
-CPAN の C<Perl::Unsafe::Signals> モジュールを使うことです
-(全てのシグナルに影響を与えます)。
+안전한 시그널의 행동을 국소적으로 무효화하는 다른 하나의 방법은
+CPAN 의 C<Perl::Unsafe::Signals> 모듈을 사용하는 것입니다
+(모든 시그널에 영향을 줍니다).
 
 =item Restartable system calls
 
-(再起動可能なシステムコール)
+(재기동가능한 시스템 콜)
 
 =begin original
 
@@ -789,14 +789,14 @@ where they previously would have succeeded.
 
 =end original
 
-これに対応しているシステムでは、より古いバージョンの Perl では %SIG
-ハンドラを設定するときに SA_RESTART フラグを使います。
-これは、再起動可能なシステムコールではシグナルが配送されたときに
-戻るのではなく続行することを意味します。
-保留シグナルを素早く配送するために、
-Perl 5.7.3 以降では SA_RESTART を I<使っていません>。
-結果として、再起動可能なシステムコールは、いままで成功していたところでも
-($! に C<EINTR> をセットして) 失敗することがあります。
+이것을 지원하는 시스템에서는 보다 옛 버젼의 Perl 에서는 %SIG 
+핸들러를 설정할 때에 SA_RESTART 플래그를 사용합니다.
+이것은 재기동가능한 시스템콜에서는 시그널이 송신된 때에 
+돌아오는 것이 아니라 속행하는 것을 의미합니다.
+보류 시그널을 빨리 송신하기 위해서
+Perl 5.7.3 이후에서는 SA_RESTART 를 I<사용하지 않습니다>.
+결과로써 재기동가능한 시스템 호출은 아직까지 성공하던 곳에도
+($! 에 C<EINTR> 을 설정해서) 실패할 수 있습니다.
 
 =begin original
 
@@ -806,13 +806,13 @@ C<waitpid> calls will always be retried.
 
 =end original
 
-デフォルトの C<:perlio> 層では C<read>, C<write>, C<close> は上述したように
-再試行し、中断された C<wait> と C<waitpid> の呼び出しは常に
-再試行されることに注意してください。
+기본 C<:perlio> 층에서는  C<read>, C<write>, C<close> 는 위에서 말했듯이
+다시 시행해서, 중단된 C<wait> 와 C<waitpid> 의 호출은 항상 
+다시 시행되는 것에 주의해주세요.
 
 =item Signals as "faults"
 
-(「障害」としてのシグナル)
+(「장해」로써의 시그널)
 
 =begin original
 
@@ -823,14 +823,14 @@ immediately rather than attempting to defer them.
 
 =end original
 
-SEGV, ILL, BUS のようなシグナルは、仮想メモリやその他の「障害」の結果として
-生成されます。
-これらは普通致命的で、Perl-レベルのハンドラができることはほとんど
-ないので、これらを保留しようとせず、直ちに配送します。
+SEGV, ILL, BUS 같은 시그널은 가상 메모리나 그 외의 "장해"의 결과로
+생성됩니다.
+이것들은 보통 치명적이고, Perl 레벨의 핸들러가 할 수 있는 일은 
+거의 없기에, 이것들을 보류하려고하지 않고 즉시 송신합니다.
 
 =item Signals triggered by operating system state
 
-(OS の状態によって発生するシグナル)
+(OS 상태에 의해 발생하는 시그널)
 
 =begin original
 
@@ -845,15 +845,15 @@ there are un-waited-for completed child processes.
 
 =end original
 
-OS によっては、ある種のシグナルハンドラは返る前に「何かをする」ことに
-なっているものもあります。
-1 つの例としては、CHLD や CLD は子プロセスが完了したことを示しています。
-OS によっては、シグナルハンドルは完了した子プロセスのために
-C<wait> することを想定されているものもあります。
-このようなシステムでは保留シグナルスキームはこれらのシグナルでは
-動作しません(C<wait> しません)。
-再び、問題は、wait していない完了した子プロセスがあるかのようにシグナルが
-再び発生することでループのように見えます。
+OS 에 따라서는 어떤 종류의 시그널 핸들러는 반환하기 전에 "무엇을 한다" 라는 것이 
+되어 있는 것도 있습니다.
+하나의 예로써는 CHLD 나 CLD 는 자식 프로세스가 완료한 것을 나타냅니다.
+OS 에 따라서는 시그널 핸들은 완료한 자식 프로세스를 위해 
+C<wait> 하는 것을 상정하는 것도 있습니다.
+이런 시스템에서는 보류 시그널 스킴은 이 시그널들에서는 
+동작하지 않습니다(C<wait> 하지않습니다).
+다시, 문제는 wait 하지 않는 완료한 자식 프로세스가 있는 가 처럼 시그널이 
+다시 발생하는 것으로 루프처럼 보입니다.
 
 =back
 
@@ -865,13 +865,13 @@ C<"unsafe"> (a new feature since Perl 5.8.1).
 
 =end original
 
-もし、メモリ破壊の可能性にもかかわらず、古いシグナルの振る舞いが
-ほしいなら、環境変数 C<PERL_SIGNALS> を C<"unsafe"> に設定してください
-(Perl 5.8.1 からの新機能です)。
+만약 메모리 파괴의 가능성에도 불구하고, 낡은 시그널의 행동을 원한다면, 
+환경변수 C<PERL_SIGNALS> 를 C<"unsafe"> 를 설정해주세요
+(Perl 5.8.1에서의 새로운 기능입니다).
 
 =head1 Using open() for IPC
 
-(IPC のために open() を使う)
+(IPC 를 위해 open() 을 사용하기)
 
 =begin original
 
@@ -882,9 +882,9 @@ something up in a child process you intend to write to:
 
 =end original
 
-Perlの open() 文は、その第二引数でパイプシンボルを前置するか末尾に
-付加することによって、一方向のプロセス間通信のために使うことができます。
-以下の例は、書き込みを行いたい子プロセスを起動させるやり方です:
+Perl 의 open() 문은 그 두번째 인수에서 파이프 심볼을 전치하든가 끝단에 
+부가하는 가에 따라서 한방향의 프로세스간 통신을 위해 사용할 수 있습니다.
+아래의 예제는 쓰기를 수행하는 자식 프로세스를 재기동 시키는 방법입니다:
 
     open(SPOOLER, "| cat -v | lpr -h 2>/dev/null")
 		    || die "can't fork: $!";
@@ -898,7 +898,7 @@ And here's how to start up a child process you intend to read from:
 
 =end original
 
-そして以下の例はそこから読み込みを行いたい子プロセスを起動する方法です:
+그리고 아래의 예제는 그후의 읽기를 수행하고 싶은 자식 프로세스를 기동하는 방법입니다:
 
     open(STATUS, "netstat -an 2>&1 |")
 		    || die "can't fork: $!";
@@ -916,9 +916,8 @@ like this:
 
 =end original
 
-特定のプログラムの一つが @ARGV にあるファイル名を期待している
-Perl スクリプトであっていいのなら、賢いプログラマは以下のように
-書くこともできます:
+특정의 프로그램의 하나가 @ARGV 에 있는 파이이름을 기대하는 Perl 스크립트여도 좋다면
+현명한 프로그래머는 아래처럼 쓸 수도 있습니다:
 
     % program f1 "cmd1|" - f2 "cmd2|" f3 < tmpfile
 
@@ -931,11 +930,10 @@ file.  Pretty nifty, eh?
 
 =end original
 
-そしてそれを呼んだシェルには関係なく、この Perl プログラムは F<f1> という
-ファイル、F<cmd1> というプロセス、標準入力(この例では F<tmpfile>)、
-F<f2> というファイル、F<cmd2> というコマンド、F<f3> というファイルから
-読み込みを行います。
-すごくいいよね?
+그리고 그것을 호출한 셸에는 관계없이 이 Perl 프로그램은 F<f1> 이라는 파일,
+F<cmd1> 이라는 프로세스, 표준입력(이 예제에서는 F<tmpfile>),
+F<f2> 라는 파일, F<cmd2> 라는 커맨드, F<f3> 라는 파일에서 
+읽기를 수행합니다. 대단하죠?
 
 =begin original
 
@@ -944,8 +942,8 @@ same effect as opening a pipe for reading:
 
 =end original
 
-読み込みのためのパイプを開くために、逆クォートを使って同じことが
-できることに気がつくかもしれません:
+읽기를 위한 파이프를 열기 위해 역따옴표를 사용해서 같은 일을 
+수행할 수 있는 것을 알고 있겠죠:
 
     print grep { !/^(tcp|udp)/ } `netstat -an 2>&1`;
     die "bad netstat" if $?;
@@ -960,11 +958,11 @@ like.
 
 =end original
 
-その推測は表面的には正しいことのように見えるかも知れませんが、一度に
-メモリにすべてを読み込む必要がないので、一度にファイルの一行や
-一レコードを処理するには(最初の例のほうが)より効率的なのです。
-同様にプロセス全体の制御を与えるので、あなたが望めば早い時期に
-子プロセスを kill することができます。
+그 추측은 표면적으로는 바르게 보이겠지만, 하넙ㄴ에 메모리에 모든 것을 읽을 
+필요가 없기 때문에, 한번에 파일의 한줄이나 하나의 레코드를 처리하기 위해서는
+(최초의 예제 쪽이) 보다 효율적입니다.
+마찬가지로 프로세스 전체의 제어를 주기 때문에, 당신이 원한다면 이른 시기에 
+자식 프로세스를 kill 할 수가 있습니다.
 
 =begin original
 
@@ -981,19 +979,17 @@ handle.  Consider:
 
 =end original
 
-open() と close() の戻り値をチェックするときは注意してください。
-パイプに対して B<書き込み> をしたのなら、SIGPIPE をトラップすべきです。
-そうしなければ、存在しないコマンドに対するパイプを起動したときに
-起こることについて考え込むことになるでしょう: open() はほとんどの
-場合成功すると見込まれるでしょうが(これは fork() の成功だけを
-反映します)、あなたの出力はその後で壮観に(spectacularly)失敗するでしょう。
-コマンドは、実際には exec() が失敗している別のプロセスで
-実行されているので、Perl はコマンドがうまく動いているかどうかを
-知ることはできません。
-したがって、偽のコマンド(bugus command)の読み手はすぐに end of file を
-受け取り、偽のコマンドに対する書き手は事前に取り扱っておくべき
-シグナルを発生させるでしょう。
-以下の例を考えてみましょう:
+open() 과 close() 의 반환값을 체크할 때는 주의해주세요.
+파이프에 대해서 B<쓰기> 를 한 것이라면 SIGPIPE 를 트랩해야합니다.
+그렇지 않으면, 존재하지 않으면 커맨드에 대한 파이프를 기동한 때에 
+일어나는 것에 대해서 생각할 겁니다: open() 은 대부분의 경우 
+성공한다고 생각할지 모르지만(이것은 fork() 의 성공만을 반영합니다),
+당신의 출력은 그 뒤에 실패할 겁니다.
+커맨드는 실제로는 exec() 가 실패한 다른 프로세스로 실행되기 때문에 
+Perl 은 커맨드가 잘 움직이는지 어떤지를 알 수 는 없습니다.
+따라서 거짓 커맨드(bugus command)를 읽는 이는 즉시 end of file 을 
+받아서 거짓 커맨드에 대해 쓰는 쪽은 사전에 다뤄둬야할 시그널을 발생시킬 겁니다.
+아래의 예제를 생각해보죠:
 
     open(FH, "|bogus")	or die "can't fork: $!";
     print FH "bang\n"	or die "can't write: $!";
@@ -1006,8 +1002,8 @@ To catch it, you could use this:
 
 =end original
 
-これはクローズするまで爆発せず、爆発すると SIGPIPE を発生させます。
-これを捕らえるには、以下のようにします:
+이것은 클로즈하기 까지 폭발하지 않고 폭발하면 SIGPIPE 를 생성하게 합니다.
+이것을 포착하기 위해서는 아래처럼 합니다:
 
     $SIG{PIPE} = 'IGNORE';
     open(FH, "|bogus")  or die "can't fork: $!";
@@ -1016,7 +1012,7 @@ To catch it, you could use this:
 
 =head2 Filehandles
 
-(ファイルハンドル)
+(파일 핸들)
 
 =begin original
 
@@ -1029,19 +1025,16 @@ child process cannot outlive the parent.
 
 =end original
 
-メインプロセスと子プロセスで同じファイルハンドル STDIN, STDOUT, 
-STDERR を共有します。
-両方のプロセスが同時にそれらのハンドルにアクセスしようとした場合、
-おかしな事が発生する可能性があります。
-あなたは子プロセスのためにファイルハンドルのクローズと再オープンにしたいと
-考えるかもしれません。
-これは、open() を使ってパイプをオープンすることによって対処することが
-できますが、一部のシステムにおいては子プロセスはその親プロセスよりも
-長生きすることはできません。
+메인 프로세스와 자식 프로세스에서 같은 파일핸들 STDIN, STDOUT, STDERR 을 공유합니다.
+양쪽의 프로세스가 동시에 그 핸들들에 접근하려고 한 경우, 
+이상한 일이 발생할 가능성이 있습니다.
+당신은 자식 프로세스를 위해 파일핸들의 클로즈와 다시 열고 싶다고 생각할지 모르겠습니다.
+이것은 open() 을 사용해서 파이프를 오픈하는 것에 의해 대처할 수 있지만, 
+일부의 시스템에서는 자식 프로세스는 그 부모프로세스에서도 생성할 수는 없습니다.
 
 =head2 Background Processes
 
-(バックグラウンドプロセス)
+(백그라운드 프로세스)
 
 =begin original
 
@@ -1049,7 +1042,7 @@ You can run a command in the background with:
 
 =end original
 
-以下のようにしてコマンドをバックグラウンドで実行することができます:
+아래처럼 해서 커맨드를 백그라운드에서 실행할 수 있습니다:
 
     system("cmd &");
 
@@ -1062,14 +1055,14 @@ details).
 
 =end original
 
-コマンドの STDOUT と STDERR (とあなたの使うシェルによっては STDIN も)は
-その親プロセスのものと同一になります。
-double-fork の実行によって、SIGCHLD を捕捉する必要はありません
-(詳しくは後述します)。
+커맨드의 STDOUT 과 STDERR (과 당신이 사용하는 셸에 따라서는 STDIN 도)은 
+그 부모 프로세스의 것과 동일하게 됩니다.
+double-fork 의 실행에 의해 SIGCHLD 를 포착할 필요는 없습니다
+(자세한 내용은 나중에 언급하겠습니다).
 
 =head2 Complete Dissociation of Child from Parent
 
-(子の親からの完全な分離)
+(자식의 부모로부터의 완전한 분리)
 
 =begin original
 
@@ -1083,13 +1076,12 @@ output doesn't wind up on the user's terminal).
 
 =end original
 
-一部の場合(例えばサーバープロセスのスタート)、親プロセスと子プロセスを
-完全に無関係のものにしたいことがあるでしょう。
-これはしばしばデーモン化と呼ばれます。
-礼儀正しいデーモンはルートディレクトリに chdir() (そのため実行ファイルの
-あったディレクトリを含むファイルシステムのアンマウントを邪魔することが
-ありません)し、その標準ファイル記述子を F</fdev/null> に
-リダイレクトします。
+일부의 경우(예를들어 서버 프로세스의 스타트), 부모 프로세스와 자식 프로세스를 완전히 
+무관계한 것으로 할 수 있겠죠.
+이것은 때때로 데몬화라고 불립니다.
+예의 바른 데몬은 루트 디렉토리에 chdir() (그때문에 실행파일이 있는 디렉토리를 
+포함한 파일 시스템의 마운트를 방해하는 일이 없습니다)하고, 그 표준 파일 기술자를 
+F</dev/null> 에 리다이렉트합니다.
 
     use POSIX 'setsid';
 
@@ -1113,12 +1105,11 @@ C<TIOCNOTTY> ioctl() on it instead.  See tty(4) for details.
 
 =end original
 
-fork() はプロセスグループリーダー(もしそうなら setsid() は
-失敗するでしょう)でないことを保証するために
-setsid() の前になければなりません。
-あなたの使っているシステムが sesid() 関数を持っていないのであれば、
-F</dev/tty> をオープンして C<TIONCNOTTY> ioctl() を代わりに使います。
-詳しくは tty(4) を参照してください。
+fork() 는 프로세스 그룹 리더(만약 그렇다면 setsid() 는 실패할겁니다)가 아닌 것을 
+보증하기 위해서 setsid() 앞이 아니면 안됩니다.
+당신이 사용하는 시스템이 setsid() 함수를 가지고 있지 않다면,
+F</dev/tty> 를 오픈해서 C<TIONCNOTTY> ioctl() 를 대신에 사용합니다.
+자세한 내용은 tty(4) 를 참조해주세요.
 
 =begin original
 
@@ -1127,12 +1118,11 @@ solutions.
 
 =end original
 
-非 UNIX ユーザーはあなたの OS の Process モジュールをチェックして
-他の解決策を探しましょう。
+비 UNIX 유저는 당신의 OS 의 Process 모듈을 체크해서 다른 해결책을 찾아보세요.
 
 =head2 Safe Pipe Opens
 
-(安全なパイプオープン)
+(안전한 파이프 오픈)
 
 =begin original
 
