--- a/trunk/perldoc/ko/perl/5.10/perlipc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlipc.pod
@@ -1139,20 +1139,18 @@ you opened whatever your kid writes to his STDOUT.
 
 =end original
 
-もう一つの、IPC のための興味深いアプローチはマルチプロセスになって
-それぞれの間で通信を行う単一のプログラムを作るというものです。
-open() 関数は C<"-|"> や C<"|-"> といったファイル引数を非常に
-おもしろいことを行うために受け付けます: これはあなたがオープンした
-ファイルハンドのための子プロセスをfork()するのです。
-その子プロセスは親プロセスと同じプログラムを実行します。
-これはたとえば、仮定された UID や GID のもとで実行する際に安全にファイルを
-オープンするのに便利です。
-マイナスにB<対する>パイプをオープンすると、あなたはオープンした
-ファイルハンドルに書き込みができ、子プロセスはそれを自分の STDIN に
-見いだします。
-マイナス B<からの> パイプをオープンした場合には、子プロセスがその
-STDOUT に書き出したものがオープンしたファイルハンドルから
-読みだしすることができるのです。
+또 다른 IPC 를 위한 흥미깊은 접근은 멀티 프로세스가 되어서
+각각의 프로세스 사이에서 통신을 수행하는 단일 프로그램을 만드는 것입니다.
+open()함수는 C<"-|"> 나  C<"|-"> 같은 파일인수를 상당하게 
+재미있는 일을 위해 받습니다: 이것은 당신이 오픈한 파일 핸들을 위한 자식 프로세스를 
+fork() 하는 것입니다.
+이 자식 프로세스는 부모 프로세스와 같은 프로그램을 실행합니다.
+이것은 예를들어, 가정된 UID 나 GID 에서 실행할 때에 안전하게 파일을 오픈하는 것에 
+편리합니다.
+마이너스에 B<대한> 파이프를 오픈하면, 당신은 오픈한 파일핸들에 쓸 수 있고,
+자식 프로세스는 그것을 자신의 STDIN 으로 봅니다.
+마이너스 B<로부터의> 파이프를 오픈한 경우에는 자식 프로세스가 그 STDOUT 
+에 써낸 것이 오픈한 파일핸들에서 읽어들일 수가 있는 것입니다.
 
     use English '-no_match_vars';
     my $sleep_count = 0;
@@ -1189,12 +1187,12 @@ your arguments.   Instead, use lower-level control to call exec() directly.
 
 =end original
 
-このやり方を行うもう一つの一般的な例は、シェルのインターフェース抜きで
-何かを実行する必要があるときでしょう。
-system() を使うとそれは直接的なものですが、パイプのオープンや
-バッククォートを安全に使うことができません。
-これはシェルがあなたの引数を触るのを止める方法がないからです。
-代わりに、exec() を直接呼び出す低レベルな制御を使います。
+이 방법을 하는 다른 하나의 일반적인 예제는 셸의 인터페이스를 빼고, 
+뭔가를 실행할 필요가 있을 때일겁니다.
+system() 을 사용하면 그것은 직접적인 것이지만, 파이프의 오픈이나 
+역따옴표를 안전하게 사용할 수가 없습니다.
+이것은 셸이 당신의 인수를 건드리는 것을 방지하는 방법이 없기 때문입니다.
+대신에, exec() 를 직접 호출하는 로우레벨 같은 제어를 사용합니다.
 
 =begin original
 
@@ -1202,7 +1200,7 @@ Here's a safe backtick or pipe open for read:
 
 =end original
 
-以下の例は、読み込み用の安全なバッククォートやパイプオープンのものです:
+아래의 예제는 읽기용의 안전한 역따옴표나 파이프오픈의 예제입니다:
 
     # add error processing as above
     $pid = open(KID_TO_READ, "-|");
@@ -1227,8 +1225,7 @@ And here's a safe pipe open for writing:
 
 =end original
 
-そして以下の例は、書き込み用の安全なバッククォートや
-パイプオープンのものです:
+그리고 아래의 예제는 쓰기용의 안전한 역따옴표나 파이프 오픈의 예제입니다:
 
     # add error processing as above
     $pid = open(KID_TO_WRITE, "|-");
@@ -1254,8 +1251,8 @@ the syntax
 
 =end original
 
-Perl 5.8.0 から パイプのために C<open> のリスト形式を使えます;
-以下のような文法で:
+Perl 5.8.0 부터 파이프를 위해 C<open> 의 리스트 형식을 사용할 수 있습니다;
+아래와 같은 방법으로:
 
     open KID_PS, "-|", "ps", "aux" or die $!;
 
@@ -1268,10 +1265,9 @@ pipes (with C<"|-"> in place of C<"-|">) is also implemented.
 
 =end original
 
-ps(1) コマンドを fork し(3 以上の引数の open() のようにシェルを
-起動することなく)、C<KID_PS> ファイルハンドル経由で標準出力を読み込みます。
-コマンドパイプに書き込むための対応する文法 (C<"-|"> の代わりに
-C<"|-">) も実装されています。
+ps(1) 커맨드를 fork 해서(3 이상의 인수의 open() 처럼 셸을 기동하지 않고),
+C<KID_PS> 파일핸들 경유로 표준출력을 읽어들입니다.
+커맨드 파이프오 쓰기 위한 방법 (C<"-|"> 대신에 C<"|-">) 도 구성할 수 있습니다.
 
 =begin original
 
@@ -1282,15 +1278,15 @@ F<modules> file mentioned below in the SEE ALSO section.
 
 =end original
 
-これらの操作は UNIX の fork でいっぱいで、その fork が他のシステムでは
-適切に実装されていない可能性があるのだということに注意してください。
-それに加えて、これらのやり方は本当のマルチスレッドではありません。
-スレッドについてより学びたいのであれば、後述する SEE ALSO の章で
-言及されている F<modules> ファイルを参照してください。
+이 조작들은 UNIX 의 fork 로 충분하고, 그 fork 가 다른 시스템에서는 
+적절하게 구성되지 않을 가능성이 있다고 하는 것에 주의해주세요.
+그에 더해서, 이 방법들은 진짜 멀티스레드가 아닌ㅂ니다.
+스레드에 대해서 좀 더 배우고 싶다고 생각하신다면, 나중에 기술할 SEE ALSO 장에서 
+언급할 F<modules> 파일을 참조해주세요.
 
 =head2 Bidirectional Communication with Another Process
 
-(他のプロセスとの双方向通信)
+(다른 프로세스와의 쌍방향통신)
 
 =begin original
 
@@ -1300,9 +1296,9 @@ doesn't actually work:
 
 =end original
 
-これは、片方向通信に対してうまく働きます。
-では双方向通信は?
-あなたがやりたいだろうとまず考えることは、実際にはうまくいきません:
+이것은 단방향통신에 대해서 잘 움직입니다.
+그럼 쌍방향 통신은?
+당신이 하고싶다고 생각하는 것은 실제로 잘 움직이지 않습니다:
 
     open(PROG_FOR_READING_AND_WRITING, "| some program |")
 
@@ -1313,8 +1309,8 @@ then you'll miss out entirely on the diagnostic message:
 
 =end original
 
-この状態で C<use warnings> プラグマか B<-w> フラグを使うのを忘れてしまうと、
-以下のような診断メッセージを得る機会を逃すことになるでしょう。
+이 상태에서 C<use warnings> 프라그마나 B<-w> 플래그를 사용하는 것을 잊어버리면,
+아래처럼 진단 메시지를 얻을 기회를 잃어버리게 되겠죠.
 
     Can't do bidirectional pipe at -e line 1.
 
