--- a/trunk/perldoc/ko/perl/5.10/perlipc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlipc.pod
@@ -1324,12 +1324,11 @@ operations.
 
 =end original
 
-本当にこういったことをしたいのなら、標準の open2() というライブラリ関数を
-使うことで、パイプの両方の端点を得ることができます。
-三方向(tridirectional)の入出力のための open3() もあるので、子プロセスの
-STDERR を捕捉することもできるのですが、そのためには 不格好な
-select() ループが必要となり、Perl の通常の入力操作を行うことが
-できません。
+정말로 이런 일을 하고 싶다면, 표준의 open2() 라는 라이브러리를 사용하는 것으로,
+파이프의 양쪽을 얻을 수 있습니다.
+세방향의 입출력을 위한 open3() 도 있기 때문에, 자식 프로세스의 
+STDERR 을 포착하는 것도 가능하지만, 그를 위해서는 꺼림직한 
+select() 루프가 필요하고, Perl 의 통상 입력조작을 수행할 수 없습니다.
 
 =begin original
 
@@ -1342,13 +1341,12 @@ system or some other one purporting to be POSIX compliant.
 
 =end original
 
-open2() のソースを見てみれば、それが全ての接続を生成するために
-UNIX での pipe() と exec() のような低水準のプリミティブを使っていることに
-気がつくでしょう。
-これは socketpair() を使うより効率が格段に良いのですが、移植性という面では
-見劣りします。
-open2() と open3() は UNIX システムやその他の POSIX に従ったシステムを
-除いてはおそらく動作しないでしょう。
+open2() 소스를 보면, 그것이 모든 접속을 생성하기 위해서 UNIX 에서의 pipe() 와 
+exec() 같은 저수준의 프리미티브를 사용하는 것을 알 수 있을 겁니다.
+이것은  socketpair() 을 사용하는 것보다 효율이 좋지만, 이식성이라는 면에서는 
+좋지 않습니다.
+open2() 와 open3() 는 UNIX 시스템이나 그 외의 POSIX 에 따른 시스템을 
+빼고는 아마 움직이지 않을 겁니다.
 
 =begin original
 
@@ -1356,7 +1354,7 @@ Here's an example of using open2():
 
 =end original
 
-以下は open2() を使った例です:
+아래는 open2() 를 사용한 예제입니다:
 
     use FileHandle;
     use IPC::Open2;
@@ -1378,17 +1376,15 @@ double-ended pipe.
 
 =end original
 
-これに関する問題は、UNIX のバッファリングが実際にはある時点に至るまで
-留まるということにあります。
-ファイルハンドル C<Writer> を自動フラッシュにしたとしても、もう一方の
-端点にあるプロセスは送られたデータを適当なタイミングで
-受け取ることになります; 一般的に云って、全てのことに関して即座に
-反応するように強制することはできません。
-上記の例では、バッファリングをしないようにするために B<-u> フラグを
-I<cat> に与えることができたのでそれができました。
-パイプ越しに使われることを想定して設計された UNIX コマンドは非常に
-少数なので、この例のようなことは、両端のあるパイプのもう一方の端点にある
-プログラムを自分自身で書かない限りはほとんどできないのです。
+이에 관한 문제는 UNIX 의 버퍼링이 실제로 어느 시점에 달하기 까지 쌓이는 가 하는 것에 
+있습니다. 파일 핸들 C<Writer> 를 자동플러쉬했다고 해도, 다른 한 쪽에 있는 
+프로세스는 보내진 데이터를 적당한 타이밍으로 받게 됩니다; 일반적으로 
+모든 것에 관해 즉시 대응하도록 강제할 수는 없습니다.
+위의 예제에서는 버퍼링을 하지 않도록 하기 위해 B<-u> 플래그를 
+I<cat> 에 줄 수 있었기 때문에 그것이 가능했습니다.
+파이프넘어 사용되는 일을 상정해서 설계된 UNIX 커맨드는 매우 소수이기 때문에 
+이 예제와 같은 일은 양쪽이 있는 파이프의 다른 한쪽에 있는 
+프로그램을 자기 자신이 쓸 수 없는 한 거의 불가능한 것입니다.
 
 =begin original
 
@@ -1397,9 +1393,8 @@ pseudo-ttys to make your program behave more reasonably:
 
 =end original
 
-この解決策は非標準の F<Comm.pl> ライブラリです。
-これはあなたのプログラムをより信頼性のあるものとするために
-擬似 TTY を使います:
+이 해결책은 비표준의 F<Comm.pl> 라이브러리입니다.
+이것은 당신의 프로긂을 보다 신뢰성있게 하기 위한 유사 TTY 를 사용합니다:
 
     require 'Comm.pl';
     $ph = open_proc('cat -n');
@@ -1418,11 +1413,10 @@ in the SEE ALSO section below.
 
 =end original
 
-このやり方では、あなたが使おうとしているプログラムのソースコードを
-いじくりまわすような必要はありません。
-F<Comm> ライブラリには他にも expect() や interact() といった関数もあります。
-後述する SEE ALSO の章にある説明の最寄りの CPAN で、このライブラリ(と
-その後継者と期待している F<IPC::Chat>) を見つけてください。
+이 방법에서는 당신이 사용하려고 하는 프로그램의 소스코드를 수없이 건드릴 필요는 없습니다.
+F<Comm> 라이브러리에는 이외에도 expect() 나 interact() 같은 함수도 있습니다.
+나중에 적을 SEE ALSO 장에 있는 설명문의 CPAN 에서, 이 라이브러리(와 
+그 후계자로 기대되는 F<IPC::Chat>) 를 봐주세요.
 
 =begin original
 
@@ -1434,17 +1428,15 @@ amongst those supported, this may be your best bet.
 
 =end original
 
-CPAN にあるより新しいモジュール Expect.pm はこの問題に対処するものです。
-このモジュールは他に IO:Pty、IO::Stty という二つの CPAN モジュールを
-必要とします。
-このモジュールは、ターミナルデバイスドライバと応答するような
-プログラムと対話するために、擬似端末をセットアップします。
-もしあなたの使っているシステムがこういったものをサポートしているのであれば、
-そちらを使った方が良いでしょう。
+CPAN 에 있는 보다 새로운 모듈 Expect.pm 은 이 문제에 대처한 것입니다.
+이 모듈은 이 외에도 IO::Pty, IO::Stty 라는 두가지 CPAN 모듈을 필요로 합니다.
+이 모듈은 터미널 디바이스드라이버로 대답하도록 프로그램과 대화하기 위해 
+유사단말을 설정합니다. 만약 당신이 사용하고 있는 시스템이 이런 것을 지원하고 있다면,
+그쪽을 사용하는 편이 좋겠죠.
 
 =head2 Bidirectional Communication with Yourself
 
-(自分で双方向通信する)
+(자기 자신이 쌍방향통신을 하기)
 
 =begin original
 
@@ -1455,11 +1447,11 @@ handles to STDIN and STDOUT and call other processes.
 
 =end original
 
-もし望むのなら、低レベルなシステムコール pipe() や fork() を
-手作業で行うために使うことができます。
-以下の例は単に説明のためのものですが、STDIN や STDOOUT に対する
-適切なハンドルを再オープンすることができ、さらに別のプロセスを
-呼び出すことができます。
+원한다면, 저레벨 시스템 콜 pipe() 나 fork() 를 수작업으로 
+수행하기 위해 사용할 수 있습니다.
+아래의 예제는 단순히 설명을 위한 것이지만, STDIN 이나 STDOUT 에 대한 
+적절한 핸들을 다시 오픈할 수 있고, 거기에 다른 별도의 프로세스를 
+호출할 수 있습니다.
 
     #!/usr/bin/perl -w
     # pipe1 - bidirectional communication using two pipe pairs
@@ -1494,9 +1486,9 @@ have the socketpair() system call, it will do this all for you.
 
 =end original
 
-しかし実際に二つの pipe の呼び出しを行う必要はありません。
-あなたの使っているシステムが socketpair() システムコールを
-サポートしていれば、それがあなたの代わりに作業を行ってくれます。
+그러나 실제 두가지 pipe 의 호출을 수행할 필요는 없습니다.
+당신이 사용하는 시스템이 socketpair() 시스템 콜을 지원하고 있다면,
+그것이 당신 대신에 작업을 수행해줍니다.
 
     #!/usr/bin/perl -w
     # pipe2 - bidirectional communication using socketpair
@@ -1532,7 +1524,7 @@ have the socketpair() system call, it will do this all for you.
 
 =head1 Sockets: Client/Server Communication
 
-(ソケット: クライアント/サーバー通信)
+(소켓: 클라이언트/서버 통신)
 
 =begin original
 
@@ -1545,14 +1537,15 @@ depending on your system.
 
 =end original
 
-UNIX から派生したオペレーティングシステムに限定されることはない
+UNIX 에서 파생한 OS 에 한정하지 않음 
+(예를들어 PC 에서는 WinSock 이(몇가지의 VMS 라이브러리처럼) 
+소켓 섶포트를 지원하고 있습니다)から派生したオペレーティングシステムに限定されることはない
 (例えば PC では WinSock が(幾つかの VMS ライブラリのように)
-ソケットサポートを提供しています)にも関らず、あなたが使っている
-システムではソケットが使えないかもしれません。
-その場合、この項に書かれていることはあなたの役には立たないでしょう。
-ソケットを使えば、仮想回路(つまり TCP ストリーム)やデータグラム(UDP
-パケット)の両方が可能になります。
-使っているシステムに、より一層依存することになるかもしれません。
+ソケットサポートを提供しています)에도 상관없이, 당신이 사용하는 시스템에서는 
+소켓을 사용할 수 없을 지도 모릅니다.
+그 경우, 그 항에 쓰여있는 일은 당신에게 도움이 되지 않겠죠.
+소켓을 사용하면 가상회로(즉 TCP 스트림)이나 데이터그램(UDP 패킷)의 양쪽이 가능하게 됩니다.
+사용하는 시스템에 보다 한층 의존하게 될지 모릅니다.
 
 =begin original
 
@@ -1564,13 +1557,12 @@ don't need to pass that information.
 
 =end original
 
-ソケットを扱うための Perl の関数呼び出しは対応する C でのシステムコールと
-同じ名前を持っています。
-しかし、引数に関しては二つの理由によって異なるものとなっています:
-第一に、Perl のファイルハンドルは C のファイル記述子とは
-異なる働きをするものである。
-第二に、Perl はすでに文字列の長さを知っているので、その情報を渡す
-必要がない、というものです。
+소켓을 사용하기 위한 Perl 의 함수호출은 대응하는 C 에서의 시스템 호출과 같은 이름을 
+가지고 있습니다.
+그러나, 인수에 과냏서는 두가지 이유에 의해 다른 것으로 되어 있습니다:
+첫번째로 Perl 의 파일핸들은 C 의 파일 기술자와는 다른 움직임을 한다는 것입니다.
+두번째로, Perl 은 이미 문자열의 길이를 알고 있기 때문에, 그 정보를 건넬 
+필요가 없다는 것입니다.
 
 =begin original
 
@@ -1583,14 +1575,12 @@ reliably grants access to various constants and functions you'll need.
 
 =end original
 
-Perl における古いソケットプログラムに関連する大きな問題とは、一部の
-定数の値として(著しく移植性を損なってしまう)ハードコードされたものが
-使われていたということです。
-C<$AF_INET = 2> のように陽に何かを設定しているプログラムを見た事があれば、
-あなたはそれが大きなトラブルになるということを知っているでしょう:
-より優れたやり方は C<Socket> モジュールを使うというものです。
-これは、あなたが必要とするであろう様々な定数や関数に対するより信頼の置ける
-アクセスを提供します。
+Perl 에 있어서 옛 소켓 프로그램에 관한 큰 문제란, 일부의 정수의 값으로써(낮은 이식성을 손해보더라도)
+하드코드된 것이 사용되었다는 것입니다.
+C<$AF_INET = 2> 처럼 뭔가 설정하는 프로그램을 본 일이 있다면, 
+당신은 그것이 큰 문제가 될거라는 것을 알고 계시겠죠:
+보다 우수한 방법은 C<Socket> 모듈을 사용하는 것입니다.
+이것은 당신이 필요로 할 여러가지 정수나 함수에 대한 보다 신뢰있는 접근을 제공합니다.
 
 =begin original
 
@@ -1604,14 +1594,12 @@ messages and responses that end with a period on an empty line
 
 =end original
 
-NNTP や SMTP のように既に存在しているプロトコルのためにサーバー/
-クライアントを書くのでなければ、あなたの作るサーバーがどのようにして
-クライアントが通話を終えたときを知ったり、その反対のことを
-知るのかということを考えておくべきでしょう。
-ほとんどのプロトコルは一行のメッセージと返事(片方のプロセスは、
-“\n”を受け取ったときにもう一つのプロセスでの処理が終了したことを
-知ります)か、空行に置かれたピリオドで終端される("\n.\n" がメッセージ/返事を
-終端する)複数行メッセージと返事に基づいています。
+NNTP 나 SMTP 처럼 이미 존재하는 프로토콜을 위해 서버/클라이언트를 쓰는 것이 아니라면, 
+당신이 만드는 서버가 어떻게해서 클라이언트가 통화를 끝낼 때를 알거나, 그 반응을 아는 가 
+하는 것을 생각해봐야할 겁니다.
+대부분의 프로토콜은 한줄의 메시지와 응답(단방향 프로세스는 "¥n" 을 받는 때에도 
+다른 하나의 프로세스에서의 처리가 끝난 것을 압니다)이나, 빈줄에 놓인 빌리어드로 
+종단되는("¥n.¥n" 이 메시지/응답을 종단하는) 몇줄의 메시지와 응답에 기반합니다.
 
 =head2 Internet Line Terminators
 
